[gd_scene load_steps=17 format=2]

[ext_resource path="res://Assets/Extras/Medals/Medal/Medal1.png" type="Texture" id=1]
[ext_resource path="res://Fonts/DynaPuff-VariableFont_wdth,wght(1)(1).ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Assets/UI/menu1.png" type="Texture" id=3]
[ext_resource path="res://Scripts/Game/GameEnd.gd" type="Script" id=4]
[ext_resource path="res://Assets/Extras/Medals/Medal/medal2.png" type="Texture" id=5]
[ext_resource path="res://admob-lib/admob.gd" type="Script" id=6]

[sub_resource type="Animation" id=4]
resource_name = "Ani"
tracks/0/type = "value"
tracks/0/path = NodePath("Medal1:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 384, -32 ), Vector2( 384, 160 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Medal2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 640, -32 ), Vector2( 640, 160 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Medal3:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 888, -32 ), Vector2( 888, 160 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("LabBut:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -824, 0 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "Ani2"
tracks/0/type = "value"
tracks/0/path = NodePath("MedaalsLabels:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -136 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MedaalsLabels:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.0196078 ) ]
}

[sub_resource type="Animation" id=10]
resource_name = "Medal2ani"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Medal2Sprt:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 171, 145 ), Vector2( 171, -39 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Medal2Sprt:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Medal2Sprt:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Medal1:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 384, -32 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Medal2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 640, -32 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Medal3:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 888, -32 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("LabBut:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("LabBut:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -824, 0 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("MedaalsLabels:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("MedaalsLabels:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Medal2Sprt:position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 171, 145 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Medal2Sprt:modulate")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("Medal2Sprt:visible")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="DynamicFont" id=1]
size = 34
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 28
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 35
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=9]
size = 48
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=8]
size = 24
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=11]
size = 32
font_data = ExtResource( 2 )

[node name="GameEnd" type="CanvasLayer"]
script = ExtResource( 4 )

[node name="ColorRect" type="ColorRect" parent="."]
pause_mode = 1
margin_right = 1320.0
margin_bottom = 756.0
color = Color( 0.141176, 0.0117647, 0.0117647, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Medal1" type="Sprite" parent="."]
pause_mode = 1
modulate = Color( 1, 1, 1, 0.215686 )
position = Vector2( 384, -32 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="Medal3" type="Sprite" parent="."]
pause_mode = 1
modulate = Color( 1, 1, 1, 0.215686 )
position = Vector2( 888, -32 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="Medal2" type="Sprite" parent="."]
pause_mode = 1
modulate = Color( 1, 1, 1, 0.215686 )
position = Vector2( 640, -32 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
pause_mode = 1
anims/Ani = SubResource( 4 )
anims/Ani2 = SubResource( 7 )
anims/Medal2ani = SubResource( 10 )
anims/RESET = SubResource( 5 )

[node name="LabBut" type="Node2D" parent="."]
pause_mode = 1
position = Vector2( -824, 0 )

[node name="NextLevelButton" type="TouchScreenButton" parent="LabBut"]
pause_mode = 1
position = Vector2( 528, 424 )
scale = Vector2( 1.5, 1.5 )
normal = ExtResource( 3 )

[node name="ReplayButton" type="TouchScreenButton" parent="LabBut"]
pause_mode = 1
position = Vector2( 240, 512 )
scale = Vector2( 1.5, 1.5 )
normal = ExtResource( 3 )

[node name="HangarButton" type="TouchScreenButton" parent="LabBut"]
pause_mode = 1
position = Vector2( 818, 512 )
scale = Vector2( 1.5, 1.5 )
normal = ExtResource( 3 )

[node name="NexLevelLabel" type="Label" parent="LabBut"]
pause_mode = 1
modulate = Color( 1, 1, 1, 0.215686 )
margin_left = 540.0
margin_top = 438.0
margin_right = 731.0
margin_bottom = 479.0
custom_fonts/font = SubResource( 1 )
text = "NEXT LEVEL"

[node name="ReplayLevelLabel" type="Label" parent="LabBut"]
pause_mode = 1
margin_left = 252.0
margin_top = 530.0
margin_right = 454.0
margin_bottom = 567.0
custom_fonts/font = SubResource( 2 )
text = "REPLAY LEVEL"

[node name="ReplayLevelLabel2" type="Label" parent="LabBut"]
pause_mode = 1
margin_left = 851.0
margin_top = 527.0
margin_right = 1003.0
margin_bottom = 573.0
custom_fonts/font = SubResource( 3 )
text = "HANGAR"

[node name="RichTextLabel" type="RichTextLabel" parent="LabBut"]
margin_left = 451.0
margin_top = 262.0
margin_right = 957.0
margin_bottom = 492.0
custom_fonts/normal_font = SubResource( 9 )
bbcode_enabled = true
bbcode_text = "[wave amp=100 freq=2] MISSION COMPLETE"
text = " MISSION COMPLETE"

[node name="MedaalsLabels" type="Node2D" parent="."]
pause_mode = 1

[node name="MedalPlus3" type="Label" parent="MedaalsLabels"]
pause_mode = 1
margin_left = 766.0
margin_top = 137.0
margin_right = 850.0
margin_bottom = 200.0
custom_fonts/font = SubResource( 8 )
text = "+100
Medals"
percent_visible = 0.0

[node name="MedalPlus2" type="Label" parent="MedaalsLabels"]
pause_mode = 1
margin_left = 511.0
margin_top = 138.0
margin_right = 595.0
margin_bottom = 201.0
custom_fonts/font = SubResource( 8 )
text = "+100
Medals"
percent_visible = 0.0

[node name="MedalPlus1" type="Label" parent="MedaalsLabels"]
pause_mode = 1
margin_left = 266.0
margin_top = 143.0
margin_right = 350.0
margin_bottom = 206.0
custom_fonts/font = SubResource( 8 )
text = "+100
Medals"
percent_visible = 0.0

[node name="Medal2Sprt" type="Sprite" parent="."]
visible = false
position = Vector2( 171, 145 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 5 )

[node name="Label" type="Label" parent="Medal2Sprt"]
margin_left = -228.0
margin_top = -50.0
margin_right = -54.0
margin_bottom = 31.0
custom_fonts/font = SubResource( 11 )
text = "+1 SPECIAL 
   MEDAL"

[node name="AdMob" type="Node" parent="."]
script = ExtResource( 6 )

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="pressed" from="LabBut/NextLevelButton" to="." method="_on_NextLevelButton_pressed"]
[connection signal="pressed" from="LabBut/ReplayButton" to="." method="_on_ReplayButton_pressed"]
[connection signal="pressed" from="LabBut/HangarButton" to="." method="_on_HangarButton_pressed"]
